improving lorebot copy

--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -119,7 +119,10 @@
 
                 <div class="welcome-box2">
                     <b>
-                        Most people don’t watch streams from beginning to end, so <bold-body>when they join midway they don’t know what they’ve missed.</bold-body>
+                        Most people don’t watch streams from beginning to end so <bold-body>when they join midway they don’t know what they’ve missed.</bold-body>
+                        <br>
+                        <br>
+                        Moreover, catching up on missed content currently means disrupting your live viewership experience.
                     </b>
                 </div>
             </div>
@@ -138,10 +141,10 @@
 
                 <div class="welcome-box2">
                     <b>
-                        <bold-body>I designed an AI tool that recaps stream events </bold-body> and answers viewer queries, while still abiding by current chat conventions and supporting the live experience.
+                        <bold-body> I designed an AI tool that allows users to fluidly jump between past context and the present live experience.</bold-body>
                         <br>
                         <br>
-                        With this goal in mind, Lorebot was built to inform viewers in the most challenging, information-dense stream environment: multi-hour, Dungeons & Dragons streams.
+                        To acheive this Lorebot was built to inform viewers in the most challenging, information-dense stream environment I know of: multi-hour, Dungeons & Dragons streams.
                     </b>
                 </div>
             </div>
@@ -178,14 +181,25 @@
             <div class="welcome-container">
                 <div class="welcome-box1">
                     <h4>
-                       Interviewing & Insights
+                       Interviews
                     </h4>
                 </div>
                 <div class="welcome-box2">
                     <b>
-                        I gathered diverse opinions, from stream novices like Sam all the way to pros like Koibu, a pioneer in the Dungeons & Dragons world on Twitch (whose stream is featured in the video above).
+                        <bold-body>I gathered a range of opinions to better understand both the joys and pain points of watching streams and D&D.</bold-body>
+                        
+                        <br>
+                        <br>
+                        This meant interviewing stream novices like Sam, experienced players and dungeons masters like Joe and Evan, and even pro streamers like Koibu, a pioneer of D&D streaming on Twitch.
                     </b>
                 </div>
+            </div>
+
+            <div class="smallbr"></div>
+            <div class="smallbr"></div>
+
+            <div class="welcome-container">
+                <img class="full-content" src="../../images/lorebot/interview-findings.png">
             </div>
 
 
