adding lorebot interview insights

--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -149,17 +149,18 @@
                 </div>
             </div>
 
-            <div class="bigbr"></div>
-            <div class="bigbr"></div>
+            <div class="hugebr"></div>
+            <div class="hugebr"></div>
+
 
 
             <div class="project-descriptions"> 
                 <h4>If I can make D&D live-streams accessible, </h4><bold-h4>I can make any live-stream accessible.</bold-h4>
             </div>
 
-            <div class="bigbr"></div>
-            <div class="bigbr"></div>
-            <div class="smallbr"></div>
+            <div class="hugebr"></div>
+            <div class="hugebr"></div>
+
 
 
             <!-- end of intro, start of process snapshot -->
@@ -181,25 +182,22 @@
             <div class="welcome-container">
                 <div class="welcome-box1">
                     <h4>
-                       Interviews
+                       Interviews & Insights
                     </h4>
                 </div>
                 <div class="welcome-box2">
                     <b>
-                        <bold-body>I gathered a range of opinions to better understand both the joys and pain points of watching streams and D&D.</bold-body>
-                        
-                        <br>
-                        <br>
-                        This meant interviewing stream novices like Sam, experienced players and dungeons masters like Joe and Evan, and even pro streamers like Koibu, a pioneer of D&D streaming on Twitch.
+                        I gathered a range of opinions to better understand both the joys and pain points of watching streams and D&D.
                     </b>
                 </div>
             </div>
 
             <div class="smallbr"></div>
             <div class="smallbr"></div>
+            <div class="smallbr"></div>
 
             <div class="welcome-container">
-                <img class="full-content" src="../../images/lorebot/interview-findings.png">
+                <img class="full-content" src="../../images/lorebot/interview-insights_uncom.png">
             </div>
 
 
