--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -259,7 +259,7 @@
 
             <div class="hugebr"></div>
             <div class="project-descriptions"> 
-                <h4>An chat-integrated, AI tool that iteratively informs viewers of past stream events to maximize their present viewership experience.</h4>
+                <h4>A chat-integrated, AI tool that iteratively informs viewers of past stream events to maximize their present viewership experience.</h4>
             </div>
             <div class="hugebr"></div>
             <div class="hugebr"></div>
