Loreobot: adding visual exploration + refinement

--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -211,14 +211,18 @@
             <div class="welcome-container">
                 <div class="welcome-box1">
                     <h4>
-                       Intervention Ideas
+                       Potential Directions
                     </h4>
                 </div>
                 <div class="welcome-box2">
                     <b>
-                        Text here.
+                       Even if unorthodox, I considered a variety of ideas that could shift the viewership paradigm on Twitch.
                     </b>
                 </div>
+            </div>
+            <div class="bigbr"></div>
+            <div class="welcome-container">
+                <img class="full-content" src="../../images/lorebot/intervention-ideas_uncom.png">
             </div>
 
       <!-- Visual Explorations -->
@@ -234,32 +238,51 @@
                 </div>
                 <div class="welcome-box2">
                     <b>
-                        Text here.
+                       I used simple gray screens to both explore more immersive chat orientations that disrupt conventions, as well as interventions that preserve Twitch chat's current qualities.
                     </b>
                 </div>
             </div>
+            <div class="bigbr"></div>
+            <div class="welcome-container">
+                <img class="full-content" src="../../images/lorebot/visual-exploration_3_uncom.png">
+            </div>
+            <div class="bigbr"></div>
+            <div class="welcome-container">
+                <div class="welcome-box1">
+                    <h4>
+                    </h4>
+                </div>
+                <div class="welcome-box2">
+                    <b>
+                        Ultimately I found that Twitch chat's UI conventions were too important to tamper with, so
+                        <bold-body> chat integration was the key.</bold-body>
+                </div>
+            </div>
+            <div class="bigbr"></div>
             
         <!-- Setlling on an Idea-->
-            <div class="bigbr"></div>
-            <div class="smallbr"></div>
             <hr>
             <div class="smallbr"></div>
             <div class="welcome-container">
                 <div class="welcome-box1">
                     <h4>
-                       Final Direction
+                       Refinement
                     </h4>
                 </div>
                 <div class="welcome-box2">
                     <b>
-                        Text here.
+                        My research insights and visual explorations showed me that the AI play-by-play route offered the most utility and integrated most naturally into Twitch chat.
                     </b>
                 </div>
             </div>
-
+            <div class="bigbr"></div>
+            <div class="welcome-container">
+                <img class="full-content" src="../../images/lorebot/refinement_1_uncom.png">
+            </div>
+            <div class="bigbr"></div>
             <div class="hugebr"></div>
             <div class="project-descriptions"> 
-                <h4>A chat-integrated, AI tool that iteratively informs viewers of past stream events to maximize their present viewership experience.</h4>
+                <h4>A chat-integrated, AI tool that iteratively informs viewers about past stream events to maximize their present viewership experience.</h4>
             </div>
             <div class="hugebr"></div>
             <div class="hugebr"></div>
