added video comp[onenet lorebot

--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -276,9 +276,16 @@
                 </div>
             </div>
             <div class="bigbr"></div>
-            <div class="welcome-container">
-                <img class="full-content" src="../../images/lorebot/refinement_1_uncom.png">
+            <video width="100%" loop autoplay >
+                <source src="../../images/lorebot/refinement_com.mp4" type="video/mp4">
+           </video>
+           <div class="smallbr"></div>
+           <div class="project-descriptions"> 
+                <h3 style="color: #757575"> 
+                    UI iterations from start to finish.
+                </h3>
             </div>
+           
             <div class="bigbr"></div>
             <div class="hugebr"></div>
             <div class="project-descriptions"> 
