fixed gallery images, and main lorebot image centering

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <main>
 
         <!-- Intro video -->
-            <video width="100%" loop autoplay controls>
+            <video width="100%" loop autoplay controls muted>
                 <source src="../../images/about/open-world_b_01032025_min.mp4" type="video/mp4">
             </video>
 
