--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -23,13 +23,18 @@
                     <a href="../about.html">☺</a>
                 </h5>
             </nav_project>
+            <!-- <img class="welcome"
+                src="../../images/lorebot/thumbnail-composite_with-logo-min.png"
+                 alt="Close up of lorebot application openend up in the chatroom of a dungeons and dragons livestream, with the lorebot logo in the top right corner"> -->
+            </header>
+
+        <main>
             <img class="welcome"
                 src="../../images/lorebot/thumbnail-composite_with-logo-min.png"
                  alt="Close up of lorebot application openend up in the chatroom of a dungeons and dragons livestream, with the lorebot logo in the top right corner">
-        </header>
-
-        <main>
             <div class="smallbr"></div>
+            <div class="smallbr"></div>
+
             
 <!-- INTRO CONTENT -->
 
