--- a/index.html
+++ b/index.html
@@ -46,11 +46,15 @@
 
                 <div class="specialbr"></div>
                 <div class="specialbr"></div>
+                        
+
             </header>
         
 <!-- START OF GALLERY -->
 
 <!-- Little dude -->
+<div class="hugebr"></div>            
+<div class="hugebr"></div>   
         <main>
             <div class="image-gallery">
                 <a href="#"><img class="smol" src="images/dion.gif"></a>
