Lorebot page overhaul - trying to open up the interview insights section to be more legible

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <a href="gallery/lorebot.html"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
         <div class="smallbr"></div>
         <div class="project-descriptions"> 
-            <h2>Lorebot</h2> 
+            <h2>AI plugin to catch you up with Twitch live-streams </h2> 
             <br> 
-            <h3>Product Design, Livestream AI Summarization</h3>
+            <h3>Product Design</h3>
             <br> 
         </div>
     </a>
@@ -83,9 +83,9 @@
                     
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2>How Far North?</h2> 
+                        <h2>Inuit Canadians' fight against tuberculosis & neglect</h2> 
                         <br> 
-                        <h3>Digital Narrative</h3>
+                        <h3>Editorial Design</h3>
                         <br> 
                     </div>
                 </a>
@@ -101,7 +101,7 @@
                 <a href="gallery/stone.html"><img class="project" src="images/stone/photography/IMG_2934.JPG">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2> Basilica of Bom Jesus </h2> 
+                        <h2> Mapping the history behind a cultural cornerstone.</h2> 
                         <br> 
                         <h3>Editorial Design</h3>
                         <br>
@@ -129,7 +129,7 @@
                 <a href="gallery/spoken.html"><img class="project" src="images/spoken/spoken_thumbnail.png">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2>A Tuvan Hero Tale</h2> 
+                        <h2>Sparking interest in an endangered Eurasian language</h2> 
                         <br> 
                         <h3> Motion & Illustration</h3><br> </div> 
                 </a>
@@ -155,14 +155,14 @@
             <div class="hugebr"></div> -->
 
 <!-- SGK project start -->
-            <div class="image-gallery">
+            <!-- <div class="image-gallery">
                 <a href="https://sgkinc.com/en/" target="_blank"><img class="project" src="images/SGK_Logo.png">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> <h2> SGK </h2> <br> <h3>Internship — Technical Design</h3><br> </div> 
                 </a>
             </div> 
 
-            <div class="hugebr"></div>
+            <div class="hugebr"></div> -->
             
         </main>
 
