fixing broken intro screen page stuff for how far north a

--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -101,12 +101,15 @@
             <div class="intro-section">
                 <div class="welcome-container">
                     <div class="welcome-box1">
-                        <!-- <h4>
-                            Background
-                        </h4> -->
+                        <video width="100%" loop autoplay muted>
+                            <source src="../../images/lorebot/20250213_background-edit-ae_com.mp4" type="video/mp4">
+                       </video>
                     </div>
 
                     <div class="welcome-box2">
+
+                        <div class="bigbr"></div>
+
                         <h3 style="color: #757575">
                             Background
                         </h3>
@@ -114,6 +117,9 @@
                         <b>
                             Twitch live-streams present a unique digital space to authentically interact and find community with others.
                         </b>
+                        <!-- <video width="100%" loop autoplay muted>
+                            <source src="../../images/lorebot/20250213_twitch-current-example_com.mp4" type="video/mp4">
+                       </video> -->
                     </div>
                 </div>
 
