adding more action words to gallery thumnails; made the inuit thumbnail a more accurate video

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <a href="gallery/lorebot.html"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
         <div class="smallbr"></div>
         <div class="project-descriptions"> 
-            <h2>AI plugin to catch you up with Twitch live-streams </h2> 
+            <h2>A D&D-themed AI plugin to catch you up with Twitch live-streams </h2> 
             <br> 
             <h3>Product Design</h3>
             <br> 
@@ -77,13 +77,17 @@
 
 <!-- Inuit project start-->
             <div class="image-gallery">
-                <a href="gallery/inuit.html"><img class="project" 
+                <a href="gallery/inuit.html">
+                    <!-- <img class="project" 
                     src="images/inuit/temp-header.PNG"
-                    alt="White introductory text to the article, sitting in the middle of a wideshot of a Northern Canadian coastal city.">
+                    alt="White introductory text to the article, sitting in the middle of a wideshot of a Northern Canadian coastal city."> -->
+                    <video width="100%" loop autoplay muted>
+                        <source src="../../images/inuit/20250217_inuit-thumbnail_edit.mp4" type="video/mp4">
+                    </video>
                     
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2>Inuit Canadians' fight against tuberculosis & neglect</h2> 
+                        <h2>Highlighting Inuit Canadians' fight against tuberculosis & neglect</h2> 
                         <br> 
                         <h3>Editorial Design</h3>
                         <br> 
