--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -13,7 +13,8 @@
     <title> Dion Lewis - Lorebot </title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Epilogue&family=Press+Start+2P&display=swap" rel="stylesheet">
-    </head>
+    <link rel="icon" type="image/png" href="../../images/favicon.svg">
+   </head>
 
     <body>
         <header>
