--- a/gallery/stone.html
+++ b/gallery/stone.html
@@ -13,6 +13,7 @@
     <title> Dion Lewis - Stone </title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Epilogue&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../../images/favicon.svg">
     </head>
 
     <body>
