--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-   
+    <link rel="icon" type="image/png" href="images/favicon.svg">
 
     
 </head>
@@ -65,7 +65,7 @@
     <a href="gallery/lorebot.html"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
         <div class="smallbr"></div>
         <div class="project-descriptions"> 
-            <h2>A D&D-themed AI plugin to catch you up with Twitch live-streams </h2> 
+            <h2>AI plugin to catch you up with Twitch live-streams </h2> 
             <br> 
             <h3>Product Design</h3>
             <br> 
@@ -87,7 +87,7 @@
                     
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2>Highlighting Inuit Canadians' fight against tuberculosis & neglect</h2> 
+                        <h2>Mapping Inuit Canadians' fight against tuberculosis & neglect</h2> 
                         <br> 
                         <h3>Editorial Design</h3>
                         <br> 
@@ -105,7 +105,7 @@
                 <a href="gallery/stone.html"><img class="project" src="images/stone/photography/IMG_2934.JPG">
                     <div class="smallbr"></div>
                     <div class="project-descriptions"> 
-                        <h2> Mapping the history behind a cultural cornerstone.</h2> 
+                        <h2> Documenting the history behind a cultural cornerstone.</h2> 
                         <br> 
                         <h3>Editorial Design</h3>
                         <br>
