changed appearance in tab

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- the meta viewport tag makes this site responsive -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- this makes th- Stuffe site work better with microsoft browsers -->
-    <title>diondesigns.me</title>
+    <title>Dion Lewis</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
