--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
 
         <!-- Info snippet -->
             <h1>
-                Hi again! My name is Dion Lewis. I'm a visual designer 
+                Hi again! My name is Dion Lewis. I'm a visual UX designer 
                 currently studying Communications Design and Social & Political History at Carnegie Mellon University. 
                 <br>
                 <br>
             
-                I believe thoughtful design invites thoughtful interaction, inspires curiosity, and fosters community.
+                I believe thoughtful design invites thoughtful interaction.
                 <br> 
            
                 <a href="mailto: lewisdion26@gmail.com" target="_blank">lewisdion26@gmail.com↗</a>.
