--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </nav_project>
                 <nav>
                     <h1>
-                        Hello there! I'm Dion Lewis, a visual designer passionate about shaping digital storytelling to be accessible and empathetic.
+                        Hello there! I'm Dion Lewis, a visual UX designer passionate about making digital storytelling accessible & empathetic.
 
                         <!-- Hello there! I'm Dion Lewis, a graphic designer passionate about crafting accesible and engaging experiences. -->
 
