--- a/index.html
+++ b/index.html
@@ -61,6 +61,54 @@
             </div> 
 
 <!-- Lorebot project start -->
+
+<!-- <div class="image-gallery">
+    <a href="https://ysiuz.github.io/20250224_force-directed_exp/">
+        <video width="100%" loop autoplay muted>
+            <source src="../../images/atlas/20250505_atlas-thumbnail_v3.mp4" type="video/mp4">
+        </video>
+        
+        <div class="smallbr"></div>
+        <div class="project-descriptions"> 
+            <h2>A living map of Instagram Reels & Tiktoks </h2> 
+            <br> 
+            <h3>Information Design</h3>
+            <br> 
+        </div>
+    </a>
+</div>  -->
+
+<div class="image-gallery">
+    <a href="https://ysiuz.github.io/20250224_force-directed_exp/" target="_blank">
+      <div class="mockup-wrapper">
+        <div class="browser-mockup">
+          <div class="browser-bar">
+            <div class="circles">
+              <span class="red"></span>
+              <span class="yellow"></span>
+              <span class="green"></span>
+            </div>
+            <span class="url">ysiuz.github.io</span>
+          </div>
+          <video width="100%" loop autoplay muted>
+            <source src="../../images/atlas/20250505_atlasthumbnail_v2.mp4" type="video/mp4" />
+          </video>
+        </div>
+      </div>
+  
+      <div class="smallbr"></div>
+      <div class="project-descriptions">
+        <h2>A living map of Instagram Reels & Tiktoks</h2>
+        <br>
+        <h3>Information Design</h3>
+        <br>
+      </div>
+    </a>
+  </div>
+  
+
+<div class="hugebr"></div>      
+
 <div class="image-gallery">
     <a href="gallery/lorebot.html"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
         <div class="smallbr"></div>
