--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <!-- Info snippet -->
             <h1>
                 Hi again! My name is Dion Lewis. I'm a visual UX designer 
-                currently studying Communications Design and Social & Political History at Carnegie Mellon University. 
+                currently studying Communications Design + Social & Political History at Carnegie Mellon University. 
                 <br>
                 <br>
             
