--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
         <!-- Info snippet -->
             <h1>
-                Hi again! My name is Dion Lewis. I'm a visual UX designer 
+                Hi again! My name is Dion Lewis. I'm a designer
                 currently studying Communications Design + Social & Political History at Carnegie Mellon University. 
                 <br>
                 <br>
