--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </nav_project>
                 <nav>
                     <h1>
-                        Hello there! I'm Dion Lewis, a visual UX designer passionate about making digital storytelling accessible & empathetic.
+                        Hello there! I'm Dion Lewis, and I design & code to make stories and data more human.
 
                         <!-- Hello there! I'm Dion Lewis, a graphic designer passionate about crafting accesible and engaging experiences. -->
 
@@ -113,7 +113,7 @@
     <a href="gallery/lorebot.html"><img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
         <div class="smallbr"></div>
         <div class="project-descriptions"> 
-            <h2>AI plugin to catch you up with Twitch live-streams </h2> 
+            <h2>Twitch AI live-stream assistant </h2> 
             <br> 
             <h3>Product Design</h3>
             <br> 
