--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </nav_project>
                 <nav>
                     <h1>
-                        Hello there! I'm Dion Lewis, and I design & code to make stories and data more human.
+                        Hello there! I'm Dion Lewis, and I design & code to make stories and data more empathetic.
 
                         <!-- Hello there! I'm Dion Lewis, a graphic designer passionate about crafting accesible and engaging experiences. -->
 
@@ -98,7 +98,7 @@
   
       <div class="smallbr"></div>
       <div class="project-descriptions">
-        <h2>A living map of Instagram Reels & Tiktoks</h2>
+        <h2>A living map of Instagram Reels & Tiktoks↗</h2>
         <br>
         <h3>Information Design</h3>
         <br>
