--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     </div>
 
-    <main>
+    <div class="index-main">
         
         <div class="project-container">
             <div class="project-box1">
@@ -193,7 +193,7 @@
                 </a>
             </div>
         </div>
-    </main>
+    </div>
 
     <div class="bigbr"></div>
 
