--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
                 <div class="welcome-box2">
                     <div class="secondary-text">
-                        Currently a digital design intern at <a href="https://www.linkedin.com/company/sgkinc/" target="_blank">SF Chronicle↗</a>.
+                        Currently I'm a Digital Design and Development <br> Intern at the <a href="https://www.sfchronicle.com/" target="_blank">San Francisco Chronicle↗</a>.
                         <div class="text-break"></div>
                         Recent graduate of Carnegie Mellon University <br>
                         studying Communications Design + History.
