condensing info on index

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             
                 <div class="welcome-box2">
                     <div class="secondary-text">
-                        Currently I'm a Digital Design and Development <br> Intern at the <a href="https://www.sfchronicle.com/" target="_blank">San Francisco Chronicle↗</a>.
+                        Digital Design and Development Intern <br> at the <a href="https://www.sfchronicle.com/" target="_blank">San Francisco Chronicle↗</a>.
                         <div class="text-break"></div>
                         Recent graduate of Carnegie Mellon University <br>
-                        studying Communications Design + History.
+                        studying Design + History.
                         <div class="text-break"></div>
                         <a href="mailto: lewisdion26@gmail.com" target="_blank">Email↗</a>&nbsp;&nbsp;
                         <a href="https://www.linkedin.com/in/dion-lewis-1117b21b5/" target="_blank">LinkedIn↗</a>&nbsp;&nbsp;
