--- a/gallery/lorebot.html
+++ b/gallery/lorebot.html
@@ -17,17 +17,47 @@
    </head>
 
     <body>
-        <header>
-            <nav_project>
-                <h5>
-                    <a href="../index.html">☁</a>
-                    <a href="../about.html">☺</a>
-                </h5>
-            </nav_project>
-            <!-- <img class="welcome"
-                src="../../images/lorebot/thumbnail-composite_with-logo-min.png"
-                 alt="Close up of lorebot application openend up in the chatroom of a dungeons and dragons livestream, with the lorebot logo in the top right corner"> -->
-            </header>
+            <header>
+                    <nav class="nav-outer">
+                        <div class="nav-inner">
+                            <div class="nav-buttons">
+                                <div class="special-buttons">
+                                    <a href="../index.html" class="nav-button">
+                                        <h1>☁</h1>&nbsp;<body>Work</body>
+                                    </a>
+                                    <a href="../about.html" class="nav-button">
+                                        <h1>☺</h1>&nbsp;<button>About</button>
+                                    </a>
+                                </div>
+                                <div class="project-buttons">
+
+                                    <!-- Projects:  -->
+                                    <a href="https://ysiuz.github.io/20250224_force-directed_exp/" target="_blank">
+                                        Atlas
+                                    </a>
+                                    <a href="https://diondesigns.me/gallery/lorebot.html">
+                                    Lorebot
+                                    </a>
+                                    <a href="https://diondesigns.me/gallery/inuit.html">
+                                        Life & Death
+                                    </a>
+
+                                    <a href="https://diondesigns.me/gallery/stone.html">
+                                        Bom Jesus
+                                    </a>
+
+                                    <a href="https://diondesigns.me/gallery/spoken.html">
+                                        Sijaan Am
+                                    </a>
+
+                                    <a href="#">
+                                        Miyamoto
+                                    </a>
+                                </div>      
+                            </div>
+                        </div>
+                    </nav>     
+        </header>
 
         <main>
             <img class="welcome"
