--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="welcome-box1">
                     <h2> Hello there, I'm Dion Lewis!
                         <div class="text-break"></div>
-                        I design + code to inspire empathy <br>
+                        I design + code to inspire empathy 
                         through stories and data.</h2>
                    
                     <div class="image-gallery">
@@ -89,9 +89,9 @@
             
                 <div class="welcome-box2">
                     <div class="secondary-text">
-                        Digital Design and Development Intern <br> at the <a href="https://www.sfchronicle.com/" target="_blank">San Francisco Chronicle↗</a>.
+                        Digital Design and Development Intern at the <a href="https://www.sfchronicle.com/" target="_blank">San Francisco Chronicle↗</a>.
                         <div class="text-break"></div>
-                        Recent graduate of Carnegie Mellon University <br>
+                        Recent graduate of Carnegie Mellon University 
                         studying Design + History.
                         <div class="text-break"></div>
                         <a href="mailto: lewisdion26@gmail.com" target="_blank">Email↗</a>&nbsp;&nbsp;
