--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                         
                         <div class="secondary-text">
                             <div class="text-break"></div>
-                            Digital Design and Dev Intern at <a href="https://www.sfchronicle.com/" target="_blank">SF Chronicle↗</a> | Present
+                            Digital Design and Dev Intern at <a href="https://www.sfchronicle.com/" target="_blank">SF Chronicle↗</a> | June 2025—Present
                             <br>
                             Technical Design Intern at <a href="https://sgkinc.com/en/" target="_blank">SGK↗</a> | May—Aug 2024
                             <br>
