--- a/gallery/stuco.html
+++ b/gallery/stuco.html
@@ -21,18 +21,45 @@
         src="../../images/stuco/stuco_thumbnail.png"
         alt="red & yellow sticky-notes with stuco written on them, surrounded by other multi-colored sticky-notes."
         >
-            <nav_project>
-                <!-- <h1>
-                    <a href="../index.html">☁Home</a>.
-                        <br> 
-                    <a href="../about.html">☺About</a>. 
-                </h1> -->
-                <h1>
-                    <a href="../index.html">☁</a>
-                    <a href="../about.html">☺</a>
-                </h1>
+            <nav class="nav-outer">
+                <div class="nav-inner">
+                    <div class="nav-buttons">
+                        <div class="special-buttons">
+                            <a href="../index.html" class="nav-button">
+                                <h1>☁</h1>&nbsp;<body>Work</body>
+                            </a>
+                            <a href="../about.html" class="nav-button">
+                                <h1>☺</h1>&nbsp;<button>About</button>
+                            </a>
+                        </div>
+                        <div class="project-buttons">
 
-            </nav_project>
+                            <!-- Projects:  -->
+                            <a href="https://ysiuz.github.io/20250224_force-directed_exp/" target="_blank">
+                                Atlas
+                            </a>
+                            <a href="https://diondesigns.me/gallery/lorebot.html">
+                               Lorebot
+                            </a>
+                            <a href="https://diondesigns.me/gallery/inuit.html">
+                                Life & Death
+                             </a>
+
+                             <a href="https://diondesigns.me/gallery/stone.html">
+                                Bom Jesus
+                             </a>
+
+                             <a href="https://diondesigns.me/gallery/spoken.html">
+                                Sijaan Am
+                             </a>
+
+                             <a href="#">
+                                Miyamoto
+                             </a>
+                        </div>      
+                    </div>
+                </div>
+            </nav>
             
         </header>
         
