--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <a href="index.html" class="nav-button active">
                                     <h1>☁</h1>&nbsp;<body>Work</body>
                                 </a>
-                                <a href="../about.html" class="nav-button">
+                                <a href="about.html" class="nav-button">
                                     <h1>☺</h1>&nbsp;<button>About</button>
                                 </a>
                             </div>
@@ -179,7 +179,7 @@
                     <div class="text-break"></div>
                     <h2>Lorebot</h2>
                     <div class="text-break"></div>
-                    An AI tool that lets Twitch viewers move fluidly between live content and past context.
+                    An AI tool that lets Twitch viewers move fluidly between the live-stream and past context.
                     <div class="text-break"></div>
                     <h3>Product Design · UX Research</h3>
                     <div class="text-break"></div>
