--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                                     <a href="index.html" class="nav-button">
                                         <h1>☁</h1>&nbsp;<body>Work</body>
                                     </a>
-                                    <a href="../about.html" class="nav-button active">
+                                    <a href="about.html" class="nav-button active">
                                         <h1>☺</h1>&nbsp;<button>About</button>
                                     </a>
                                 </div>
