--- a/gallery/spoken.html
+++ b/gallery/spoken.html
@@ -19,12 +19,47 @@
     <body>
         
         <header>
-            <nav_project>
-                <h5>
-                    <a href="../index.html">☁</a>
-                    <a href="../about.html">☺</a>
-                </h5>
-            </nav_project>
+            <nav class="nav-outer">
+                <div class="nav-inner">
+                    <div class="nav-buttons">
+                        <div class="special-buttons">
+                            <a href="../index.html" class="nav-button">
+                                <h1>☁</h1>&nbsp;<body>Work</body>
+                            </a>
+                            <a href="../about.html" class="nav-button">
+                                <h1>☺</h1>&nbsp;<button>About</button>
+                            </a>
+                        </div>
+                        <div class="project-buttons">
+
+                            <!-- Projects:  -->
+                            <a href="https://ysiuz.github.io/20250224_force-directed_exp/" target="_blank">
+                                Atlas
+                            </a>
+                            <a href="https://diondesigns.me/gallery/lorebot.html">
+                               Lorebot
+                            </a>
+                            <a href="https://diondesigns.me/gallery/inuit.html">
+                                Life & Death
+                             </a>
+
+                             <a href="https://diondesigns.me/gallery/stone.html">
+                                Bom Jesus
+                             </a>
+
+                             <a href="https://diondesigns.me/gallery/spoken.html" class="active">
+                                Sijaan Am
+                             </a>
+
+                             <a href="#">
+                                Miyamoto
+                             </a>
+                        </div>      
+                    </div>
+                </div>
+            </nav>
+            
+        </header>
                 <img class="welcome"
                 src="../../images/spoken/spoken_thumbnail.png"
                 alt="red & yellow sticky-notes with stuco written on them, surrounded by other multi-colored sticky-notes."
