--- a/gallery/voice.html
+++ b/gallery/voice.html
@@ -18,37 +18,46 @@
     <body>
         <main>
             <header>
-                <nav>
-                    <ul>
-                        <li>
-                            <div class="stuff">
-                            <h3>
-                            <a href="../index.html"> 
-                                Dion Lewis
-                            </a>
-                            </h3>
+                <nav class="nav-outer">
+                    <div class="nav-inner">
+                        <div class="nav-buttons">
+                            <div class="special-buttons">
+                                <a href="../index.html" class="nav-button">
+                                    <h1>☁</h1>&nbsp;<body>Work</body>
+                                </a>
+                                <a href="../about.html" class="nav-button">
+                                    <h1>☺</h1>&nbsp;<button>About</button>
+                                </a>
                             </div>
-                        </li>
-                        <li>
-                            <div class="about">
-                            <h3>
-                            <a href="../play.html"> 
-                                Play
-                            </a>
-                            </h3>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="about">
-                            <h3>
-                            <a href="../about.html"> 
-                                About
-                            </a>
-                            </h3>
-                            </div>
-                        </li>
-                    </ul>
+                            <div class="project-buttons">
+
+                                <!-- Projects:  -->
+                                <a href="https://ysiuz.github.io/20250224_force-directed_exp/" target="_blank">
+                                    Atlas
+                                </a>
+                                <a href="https://diondesigns.me/gallery/lorebot.html">
+                                   Lorebot
+                                </a>
+                                <a href="https://diondesigns.me/gallery/inuit.html">
+                                    Life & Death
+                                 </a>
+
+                                 <a href="https://diondesigns.me/gallery/stone.html">
+                                    Bom Jesus
+                                 </a>
+
+                                 <a href="https://diondesigns.me/gallery/spoken.html">
+                                    Sijaan Am
+                                 </a>
+
+                                 <a href="#">
+                                    Miyamoto
+                                 </a>
+                            </div>      
+                        </div>
+                    </div>
                 </nav>
+                
             </header>
             <div class="bigbr"> </div>
             <div class="bigbr"> </div>
