--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
             <div class="text-break"></div>
             <div class="text-break"></div>
         <!-- Intro video -->
-            <video width="100%" loop autoplay controls muted style="margin-left: auto; margin-right: auto;">
+            <video class="full" width="100%" loop autoplay controls muted style="margin-left: auto; margin-right: auto;">
                 <source src="../../images/about/open-world_b_01032025_min.mp4" type="video/mp4">
             </video>
             <div class="text-break"></div>
