--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="intro">
             <h2>Hello there, I'm Dion Lewis!<br>
                 
-                I design + code to inform and connect.</h2>
+                I design + code to inform and connect people.</h2>
                 <div class="text-break"></div>
                 <div class="text-break"></div>
 
