--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="text-break"></div>
                     Interface design and direction for an emerging reader-facing digital product.
                     <div class="text-break"></div>
-                    <h4>Product Design · Stakeholder Research · Prototyping </h4>
+                    <h4>Product Design · Product Direction · Stakeholder Research · Prototyping </h4>
                     <div class="text-break"></div>
                 </a>
 
