--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 </a>
                
 
-                <a href="delightful-chebakia-c33eda.netlify.app" class="gallery-anchor">
+                <a href="https://delightful-chebakia-c33eda.netlify.app/" class="gallery-anchor">
                     <video width="100%" loop autoplay muted>
                         <source src="../../images/sfchronicle/sfchronicle-thumbnail.mp4" type="video/mp4">
                     </video>
