added lock unicode on sfchron anchor on index page.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </video>
                     <div class="text-break"></div>
                     <div class="text-break"></div>
-                    <h1>San Francisco Chronicle</h1>
+                    <h1>San Francisco Chronicle 🔐</h1>
                     <div class="text-break"></div>
                     Interface design and direction for an emerging reader-facing digital product.
                     <div class="text-break"></div>
