rearranged index gallery so chronicle is second on desktop

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                                 <a href="https://ysiuz.github.io/20250224_force-directed_exp/" target="_blank">
                                     Atlas
                                 </a>
+                                <a href="https://delightful-chebakia-c33eda.netlify.app/gallery/chronicle.html">
+                                   Chronicle
+                                </a>
                                 <a href="https://diondesigns.me/gallery/lorebot.html">
                                    Lorebot
                                 </a>
@@ -152,6 +155,18 @@
                                         <div class="text-break"></div>
 
                 </a>
+
+                                <a href="gallery/lorebot.html" class="gallery-anchor">
+                    <img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
+                    <div class="text-break"></div>
+                    <div class="text-break"></div>
+                    <h1>Lorebot</h1>
+                    <div class="text-break"></div>
+                    An AI tool that lets Twitch viewers move fluidly between the live-stream and past context.
+                    <div class="text-break"></div>
+                    <h4>Product Design · UX Research</h4>
+                    <div class="text-break"></div>
+                </a>
                
 
                 <a href="https://delightful-chebakia-c33eda.netlify.app/gallery/chronicle.html" class="gallery-anchor">
@@ -184,17 +199,22 @@
             </div>
         
             <div class="project-box2">
-                <a href="gallery/lorebot.html" class="gallery-anchor">
-                    <img class="project" src="images/lorebot/thumbnail-composite_with-logo-min.png">
+
+
+                <a href="https://delightful-chebakia-c33eda.netlify.app/gallery/chronicle.html" class="gallery-anchor">
+                    <video width="100%" loop autoplay muted>
+                        <source src="../../images/sfchronicle/sfchronicle-thumbnail.mp4" type="video/mp4">
+                    </video>
                     <div class="text-break"></div>
                     <div class="text-break"></div>
-                    <h1>Lorebot</h1>
+                    <h1>San Francisco Chronicle 🔐</h1>
                     <div class="text-break"></div>
-                    An AI tool that lets Twitch viewers move fluidly between the live-stream and past context.
+                    Interface design and direction for an emerging reader-facing digital product.
                     <div class="text-break"></div>
-                    <h4>Product Design · UX Research</h4>
+                    <h4>Product Design · Stakeholder Research · Prototyping </h4>
                     <div class="text-break"></div>
                 </a>
+
 
                 <a href="gallery/inuit.html" class="gallery-anchor">
                     <video width="100%" loop autoplay muted>
