copy on website change

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="intro">
             <h1>Hello there, I'm Dion Lewis!<br>
                 
-                I design + code digital products to inform and connect people.</h1>
+                I design digital accessible digital products.</h1>
                 <div class="text-break"></div>
                 <div class="text-break"></div>
 
@@ -195,7 +195,7 @@
                     <div class="text-break"></div>
                     <h1>San Francisco Chronicle 🔐</h1>
                     <div class="text-break"></div>
-                    Interface design and direction for an emerging reader-facing digital product.
+                    Interface design & direction for a new reader-facing digital product.
                     <div class="text-break"></div>
                     <h4>Product Design · Stakeholder Research · Prototyping </h4>
                     <div class="text-break"></div>
