--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="intro">
             <h1>Hello there, I'm Dion Lewis!<br>
                 
-                I design digital accessible digital products.</h1>
+                I design accessible digital products.</h1>
                 <div class="text-break"></div>
                 <div class="text-break"></div>
 
