--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="secondary-text">
                     
                     Previously, Digital Design & Development Intern @ <a href="https://www.sfchronicle.com/" target="_blank">San Francisco Chronicle↗</a>.
-                    Currently based in Toronto.
+                    Currently freelancing out of Toronto. Open for full-time opportunities.
                     
                     <div class="text-break"></div>
                     <div class="text-break"></div>
